Fix alignment on checkbox switches

--- a/public/css/bundle.css
+++ b/public/css/bundle.css
@@ -33,10 +33,10 @@
     .checkbox input:checked + span {
       border-color: #32d283; }
     .checkbox input:checked + span::before {
-      left: 1rem;
+      margin-left: 1rem;
       background-color: #3ddea0; }
     .checkbox input:checked:active + span::before {
-      left: 0.85rem; }
+      margin-left: 0.85rem; }
     .checkbox input:active + span {
       filter: brightness(0.95); }
     .checkbox input:active + span::before {
@@ -46,8 +46,10 @@
   .checkbox span {
     width: 2.25rem;
     height: 1.25rem;
-    display: inline-block;
+    display: flex;
     position: absolute;
+    top: -0.125rem;
+    align-items: center;
     background-color: #fff;
     left: 0;
     pointer-events: none;
@@ -61,10 +63,8 @@
       width: 0.8rem;
       background-color: #bbb;
       border-radius: 0.9rem;
-      position: relative;
-      top: -0.10625rem;
-      left: 0.2rem;
       display: inline-block;
+      margin-left: 0.2rem;
       transition: all 0.2s ease-out; }
 
 input, textarea {
